<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/scanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/scanbutton"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/manageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/scanner" />


    <TextView
        android:id="@+id/scanText"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/scanner"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/scanButton"
        app:layout_constraintStart_toStartOf="@+id/scanButton"
        app:layout_constraintTop_toBottomOf="@+id/scanButton" />

    <ImageButton
        android:id="@+id/manageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="82dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/managebutton"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scanButton"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/manage" />

    <TextView
        android:id="@+id/manageText"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/manage"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/manageButton"
        app:layout_constraintStart_toStartOf="@+id/manageButton"
        app:layout_constraintTop_toBottomOf="@+id/manageButton" />

    <ImageButton
        android:id="@+id/importButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/importbutton"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/exportButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanText"
        app:srcCompat="@drawable/import_icon" />

    <ImageButton
        android:id="@+id/exportButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/exportbutton"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/importButton"
        app:layout_constraintTop_toBottomOf="@+id/manageText"
        app:srcCompat="@drawable/export" />

    <TextView
        android:id="@+id/importText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/import_string"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/importButton"
        app:layout_constraintStart_toStartOf="@+id/importButton"
        app:layout_constraintTop_toBottomOf="@+id/importButton" />

    <TextView
        android:id="@+id/exportText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/export"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/exportButton"
        app:layout_constraintStart_toStartOf="@+id/exportButton"
        app:layout_constraintTop_toBottomOf="@+id/exportButton" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/yellow"
        android:minHeight="65dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:id="@+id/product_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adamina"
            android:gravity="top"
            android:maxLines="2"
            android:text="Warehouse \nInventory"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            android:typeface="normal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="27dp" />

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center|right"
            android:contentDescription="settings"
            android:padding="5dp"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:src="@drawable/settings"
            tools:layout_editor_absoluteX="197dp"
            tools:layout_editor_absoluteY="25dp" />

    </android.support.v7.widget.Toolbar>

</android.support.constraint.ConstraintLayout>
